--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.1.1
 django-email==0.1.10
 django-smtp-ssl==1.0
 gunicorn==20.1.0
+python-decouple==3.6
 sqlparse==0.4.2
 tzdata==2022.2
 whitenoise==6.2.0
